# fastapi_at1

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/services/: api.py  database.py  page.py
src/templates/: index.html  movie_detail.html  recommend.html  search_results.html  stats.html
tests/: test_main.py
